# WindowsExternalMixer

./: .gitignore  CMakeLists.txt
arduino/: CMakeLists.txt
arduino/cmake/: BoardOptions.cmake
arduino/libraries/rotary/: rotary.cpp  rotary.h
arduino/sketches/windowsexternalmixer/: windowsexternalmixer.ino  windowsexternalmixer.ino.standard.hex  windowsexternalmixer.ino.with_bootloader.standard.hex
arduino/src/: main.cpp  rotary.cpp  rotary.h
requirements/: Makefile  dev.in  dev.txt  main.txt
windowsexternalmixer/: audio.py
